 - Stop trying to figure out link options for filesystem library.
 - You can now set `PQXX_LINT=skip` to skip lint checks.
 - Shell scripts now have "`.sh`" suffix.  Saves hand-coding names.
 - New helper functions to query a type's nullness properties.
 - More SQL statements can now be `std::string_view` instead of `pqxx::zview`.
 - Work around broken multidim operator[] support in MSVC 2022.
7.10.4
 - Logic for controlling non-blocking mode was inverted (non-Windows). (#1057)
 - Pass SQL error code when throwing `pqxx::insufficient_privilege`. (#1077)
 - Deprecated the unnamed prepared statement.
7.10.3
 - Fix Microsoft Visual Studio C++17 build. (#1036, #1037)
 - Run Appveyor & CircleCI tests against multiple C++ versions at once.
7.10.2
 - CMake: Drop unneeded, broken `PostgreSQL_INCLUDE_DIRS` definition. (#981)
 - Handle spaces and single quotes in `connection::connection_string()` (#992)
 - _I said,_ can't pass parameters to streaming query.  Remove support. (#997)
 - Fix pkgconfig for static linkage; use config module `libpq`. (#999)
 - Made `row::as_tuple()` public. (#1003)
 - Avoid garbage at end of demangled names. (#1007)
 - Fix build when `std::free` is not `noexcept`, such as Mac. (#1010)
 - Document: generally `pqxx::type_name` should be a `std::string_view`. (#1009)
 - Fix float-to-text conversion workaround when `charconv` is missing.
 - Fix `result::affected_rows()` for empty results. (#1018)
 - Fix error message in `result::expect_columns()`. (#1020)
 - Fix for compilers that support concepts but not ranges. (#1017)
 - Avoid deprecation warning for `<ciso646>`. (#1023)
7.10.1
 - Fix string conversion buffer budget for arrays containing nulls. (#921)
 - Remove `-fanalyzer` option again; gcc is still broken.
 - Oops, no, minimum CMake version is not 3.28, but 3.12!
 - Fix warnings on compilers that accept `[[assume]]` with a warning. (#928)
 - Can't pass parameters to streaming query.