@@ -14,6 +14,7 @@ void test_021()
 
   std::string const host{
     ((cx.hostname() == nullptr) ? "<local>" : cx.hostname())};
+#include <pqxx/internal/ignore-deprecated-pre.hxx>
   cx.process_notice(
     std::string{} + "database=" + cx.dbname() +
     ", "
@@ -28,11 +29,13 @@ void test_021()
     ", "
     "backendpid=" +
     pqxx::to_string(cx.backendpid()) + "\n");
+#include <pqxx/internal/ignore-deprecated-post.hxx>
 
   pqxx::work tx{cx, "test_021"};
 
   // By now our connection should really have been created
   cx.process_notice("Printing details on actual connection\n");
+#include <pqxx/internal/ignore-deprecated-pre.hxx>
   cx.process_notice(
     std::string{} + "database=" + cx.dbname() +
     ", "
@@ -47,10 +50,14 @@ void test_021()
     ", "
     "backendpid=" +
     pqxx::to_string(cx.backendpid()) + "\n");
+#include <pqxx/internal/ignore-deprecated-post.hxx>
 
   std::string p;
+
+#include <pqxx/internal/ignore-deprecated-pre.hxx>
   pqxx::from_string(cx.port(), p);
   PQXX_CHECK_EQUAL(p, pqxx::to_string(cx.port()));
+#include <pqxx/internal/ignore-deprecated-post.hxx>
   PQXX_CHECK_EQUAL(pqxx::to_string(p), p);
 
   pqxx::result const R(tx.exec("SELECT * FROM pg_tables"));
